# terraformform

./: .gitignore  basic_hosting_order.json  basic_hosting_spec.json  docker-compose.yml  hello.py  mongo.py  pyproject.toml
api/: main.py  mongo.py
api/payments/: api.py  models.py
api/terraformform/: api.py  local_module_service.py  models.py  ui.py
api/terraformform/terraform/dev/: main.tf
api/terraformform/terraform/dev/.terraform/modules/: modules.json
api/terraformform/terraform/modules/postgresql/: main.tf
api/terraformform/terraform/modules/simple/: main.tf
